--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
             padding-left: 80px;
             padding-top: 20px;
         }
+        .recipe{
+            padding-top: 80px;
+        }
     </style>
 </head>
 <body class="p-3 mb-2 bg-dark text-white">
@@ -159,6 +162,20 @@
                     </div>
                     <div class="title-blog">
                         <h1 class="h-blog">Social Link Profile</h1>
+                    </div>
+                </a>
+            </div>
+        </div>
+
+        <!-- Div for Recipe Page-->
+        <div class="container">
+            <div class="float">
+                <a href="div4/index.html">
+                    <div class="social-img">
+                        <img style="height: 122px; margin-top: 50px; margin-top: 50px;" src="div4/image-omelette.jpeg" class="blog" alt="">
+                    </div>
+                    <div class="title-blog recipe">
+                        <h1 class="h-recipe">Recipe Page View</h1>
                     </div>
                 </a>
             </div>
