--- a/index.html
+++ b/index.html
@@ -180,6 +180,23 @@
                 </a>
             </div>
         </div>
+
+        
+    </div>
+    <div class="row-two">
+        <!-- Div for Product Preview Card-->
+        <div class="container">
+            <div class="float">
+                <a href="div5/index.html">
+                    <div class="social-img">
+                        <img style="height: 225px; width: 150px; margin-left: 65px;" src="div5/image-product-desktop.jpg" class="blog" alt="">
+                    </div>
+                    <div class="title-blog product">
+                        <h1 class="h-recipe" style="position: relative; left: -10px;">Product Review Card</h1>
+                    </div>
+                </a>
+            </div>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
