--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         }
         .float:hover{
             background-color: #CCCCFF;
+            box-shadow: 0 0 10px 5px #0a98cb;
         }
         
         .float{
@@ -56,6 +57,7 @@
         h1:hover{
             background-color: #40E0D0;
             color: black;
+            box-shadow: 0 0 10px 5px black;
         }
         .social-img{
             padding-left: 10px;
@@ -75,6 +77,9 @@
         }
         .recipe{
             padding-top: 80px;
+        }
+        img:hover{
+            box-shadow: 0 0 10px 5px black;
         }
     </style>
 </head>
