added shadow on all pages

--- a/div1/index.html
+++ b/div1/index.html
@@ -26,6 +26,9 @@
             background-color: white;
             border-radius: 1rem;
         }
+        .parent:hover{
+            box-shadow: 0 0 10px 5px black;
+        }
         img{
             width: 205px;
             height: 220px;
