--- a/div3/index.html
+++ b/div3/index.html
@@ -21,6 +21,10 @@
             width: 300px;
             border-radius: 1rem;
             background-color: hsl(0, 0%, 20%);
+            box-shadow: 0 0 10px 5px white;
+        }
+        button:hover{
+            box-shadow: 0 0 10px 5px rgba(255, 255, 255, 0.538);
         }
         img{
             height: 100px;
