--- a/div2/index.html
+++ b/div2/index.html
@@ -10,7 +10,7 @@
             margin: 0;
         }
         body{
-            background-color: hsl(47, 88%, 63%);
+            background-color: #f4d04e;
             height: 100vh;
             width: 100vw;
             display: flex;
@@ -23,6 +23,9 @@
             background-color: #fff;
             border-radius: 1rem;
             box-shadow: 10px 10px ;
+        }
+        .container:hover{
+            box-shadow: 0 0 25px 15px #062504;
         }
         img{
             width: 235px;
