--- a/div5/index.html
+++ b/div5/index.html
@@ -20,7 +20,16 @@
             display: flex;
             flex-direction: row;
             font-family: cursive;
-            border-radius: 1rem;
+            border-radius: 1rem;box-shadow: 0 0 10px 5px black;
+        }
+        .container:hover{
+            box-shadow: 0 0 10px 5px darkcyan;
+        }
+        .btn:hover{
+            box-shadow: 0 0 10px 5px black;
+        }
+        img:hover{
+            box-shadow: 0 0 10px 5px black;
         }
         img{
             height: 450px;
