added sixth div

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             justify-content: center;
             padding-top: 20px;
         }
-        .row-one{
+        .row-one , .row-two{
             display: flex;
             justify-content: space-between;
         }
@@ -80,6 +80,10 @@
         }
         img:hover{
             box-shadow: 0 0 10px 5px black;
+        }
+        .cards{
+            padding-left: 25%;
+            padding-top: 15%;
         }
     </style>
 </head>
@@ -188,6 +192,8 @@
 
         
     </div>
+
+
     <div class="row-two">
         <!-- Div for Product Preview Card-->
         <div class="container">
@@ -198,6 +204,20 @@
                     </div>
                     <div class="title-blog product">
                         <h1 class="h-recipe" style="position: relative; left: -10px;">Product Review Card</h1>
+                    </div>
+                </a>
+            </div>
+        </div>
+
+        <!-- Div for Card Preview-->
+        <div class="container">
+            <div class="float">
+                <a href="div6/index.html">
+                    <div class="social-img">
+                        <img style="height: 200px;" src="div6/preview.jpeg" class="blog" alt="">
+                    </div>
+                    <div class="cards">
+                        <h1 class="h-card">Four Card Preview</h1>
                     </div>
                 </a>
             </div>
