added sixth div

--- a/div6/index.html
+++ b/div6/index.html
@@ -94,7 +94,7 @@
 <body>
     <div class="texts">
         <h1 id="one">Reliable, efficient delivery</h1>
-        <h1 id="two">Powered by Technology</h1>
+        <h1 id="two">Powered by A T Shakib's Astroworld</h1>
         <p id="three">Our Artificial Intelligence powered tools use millions of project data points to ensure that your project data points to ensure that your project is successful</p>
     </div>
     <div class="cards">
